[package]
name = "nuclia"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
bench = false
name = "nuclia_lib"

[dependencies]
anyhow = "1.0.56"
tokio = {version = "1.17.0", features=["full"]}

[[test]]
name = "integration"
path = "tests/integration.rs"