[package]
name = "nuclia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "nuclia"
path = "src/main.rs"

[lib]
name = "nuclia"
path = "src/lib.rs"
bench = false

[dependencies]
anyhow = "1.0.56"
tokio = {version = "1.17.0", features=["full"]}

[[test]]
name = "integration"
path = "tests/integration.rs"